# llama.cpp_vlm_bpu

./: README.md
src/: CMakeLists.txt
src/s100/: CMakeLists.txt  intern2vl-bpu-cli.cpp  smolvlm-bpu-cli.cpp
src/x5/: CMakeLists.txt  README.md  intern2vl-bpu-cli.cpp  smolvlm-bpu-cli.cpp
utils/: README.md  convert_hf_to_gguf_intern2.py
utils/InternVL2_5-1B/: config.json
